# hjartax

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: plotting.py  train_ode_model.ipynb
src/hjartax/: __init__.py  data.py  modules_cnn.py  modules_dense_nn.py  ode.py  trainer.py
tests/: test_data.py  test_modules.py  test_ode_model.py  test_trainer.py
