[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hjartax"
version = "0.1.0"
description = "Hybrid ODE heart rate model implemented in JAX."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

dependencies = [
  "jax>=0.4.20",
  "jaxlib>=0.4.20",
  "diffrax>=0.5.0",
  "equinox>=0.11.0",
  "optax>=0.2.2",
  "numpy>=1.23",
  "pandas>=1.5",
  "tqdm>=4.64",
  "pyarrow>=10.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
